--- a/index.html
+++ b/index.html
@@ -7,6 +7,36 @@
     <title>CSS Demo</title>
 </head>
 <body>
+    <header>
+        <h1>CSS Demo</h1>
+    </header>
+    <main>
+        <section>
+            <img 
+                src="http://picsum.photos/200"
+                alt="stock photo for demo"
+            />
+            <br />
+            <a href="https://www.w3schools.com/cssref/index.php">CSS Ref W3Schools</a>
+        </section>
+        <section>
+            <ol>
+                <li>New York</li>
+                <li class="middle">London</li>
+                <li>Paris</li>
+            </ol>
+        </section>
+        <section>
+            <ul id="hobbies">
+                <li>Writing</li>
+                <li class="middle">Drawing</li>
+                <li>Painting</li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <p>by Laurie !</p>
+    </footer>
     
 </body>
 </html>
