--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     </header>
     <main>
         <section>
+            <input id="name-input"/>
+            <button id="submit-button">Submit</button>
+            <p id="greeting"></p>
+            <p id="current-key">Key: </p>
+        </section>
+        <section>
             <img 
                 src="http://picsum.photos/200"
                 alt="stock photo for demo"
@@ -37,6 +43,6 @@
     <footer>
         <p>by Laurie !</p>
     </footer>
-    
+    <script src="script.js"></script>
 </body>
 </html>
